# EGL

./: .gitignore  LICENSE  README.md  config.yaml  config_cvd.py  config_graph.py  config_registry.py  main.py  main_loop.py  plot_01_iterations.py  plot_02_stable_kg.py  plot_03_path_agenda.py  plot_04_edge_interaction.py  plot_05_compare_figures.py  plot_all_from_config.py  plot_config.yaml  plot_config_utils.py  pyproject.toml  run_batch.sh  utils.py  utils_cache.py  utils_control.py  utils_dataset.py  utils_graph.py  utils_models.py  utils_plot.py  utils_prompt.md
data_processing/: COPD_CT_Dict.py  README_preprocessing.md  S00_convert_raw_to_feather.py  S01_split_COPD_NLST.py  S02_check_diag_cvd.py  S02_keep_optimal_CT_series_only.py  S03_merge_clinical_data.py  S03_sanity_check_cvd_events.py  utils_data_processing.py
