[project]
name = "egl"
version = "0.1.0"
description = "Evidence-Grounded Learning code for MICCAI 2026 CVD knowledge discovery experiments."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx==0.28.1",
    "matplotlib==3.10.8",
    "networkx>=3.3",
    "numpy==1.26.4",
    "openai==2.16.0",
    "openpyxl>=3.1.5",
    "pandas==2.3.3",
    "pillow==12.1.0",
    "pyarrow==23.0.0",
    "pyyaml>=6.0.3",
    "scikit-learn==1.8.0",
    "scipy>=1.16.0",
    "tqdm==4.67.2",
    "xgboost==3.1.3",
]

[project.optional-dependencies]
legacy = [
    "pandas-plink>=2.3.2",
]

[tool.uv]
package = false
